# kojacoord

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  rustfmt.toml
.cargo/: audit.toml
cargo-kpl/: Cargo.toml  README.md
cargo-kpl/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: encryption.rs  error.rs  forwarding.rs  lib.rs  microsoft.rs  mojang_lookup.rs  offline.rs  pipeline.rs  property_sig.rs  session.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: coordination.rs  discovery.rs  lib.rs  load_balancer.rs  node.rs
crates/dashboard-api/: Cargo.toml
crates/dashboard-api/.sqlx/: query-05acf6a09ae98bcbddd08e9b6c1243679edc422a14f1b2fbc59fd57cd280ed04.json  query-06992f1bb114f2161d737ffcc204577c1bc1abda133d94bd437767303d17446e.json  query-2dbdd958817cac8fef0aefc541426d46fa553a0c1e6e6a804ef36d049df58de3.json  query-35caedd3778f4fd3fb7e9a70257d226d2b14d2ce3591fe0a79c84e7768784a97.json  query-3889f55da3f0a39aa67c90daff27ed895fa2300f8c6c73d2fd2e70ca2fe1f68a.json  query-3a8dd4b9f5f3f6442058358e602863549469c1a2257c83b1ad6b39a6dae48887.json  query-5856c20ba9ad3422195a9f16291d5f7b65c4dcab7bb1a33df99fda300622f24b.json  query-6eb2b0728c584c380aca06b7a102f99b393cc67d55e71b35c54a79492c4e9b3e.json  query-759f3e2e40fe2881212265e3a65efc2107a1f490c0703b2cdcb96174a91c6c8b.json  query-77af025a92c693951cd3e1a02a2afa68d1b6a3137d00c514d14fcad86b007b4b.json  query-7b39a0c132d8a6c35701291d9760b7f83239e211da662e34e7323f8fb1787eda.json  query-7fce84c2e2d7b349042b839e8f42703abe141e0b8db8aa600a3042e2b9a7c718.json  query-8321f762990776b454a683edc7e902b6cf45ae9b23417ecd0923712417e16089.json  query-a8fd01f9f58577ad6b5e1b0a26499a807c57cc47433f0e97141982943ad456a5.json  query-b99188d8ccbadf9cf80b7139a9eeedbf294f6530e8cf2586aeb5c63c2bbb709e.json  query-e2a05bafaf17a08b4ccb9313c6af0faf4bf9d764f1c622dfe7ea2e8d5f2acece.json  query-e8c6ec895baac52b8a958ae262820103735eef519fd4fa6f79acb0e4e7ea8b43.json
crates/dashboard-api/src/: auth.rs  config.rs  db.rs  error.rs  events.rs  lib.rs  modpack.rs  s3.rs
crates/dashboard-api/src/routes/: admin_users.rs  backups.rs  console.rs  events.rs  files.rs  login.rs  logs.rs  mod.rs  players.rs  servers.rs  templates.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: analytics.rs  collector.rs  exporter.rs  lib.rs
crates/protocol/: Cargo.toml
crates/protocol/data/: block_flattening.toml  item_flattening.toml
crates/protocol/src/: codec.rs  dimension_codec.rs  error.rs  lib.rs  negotiation.rs  registry.rs
crates/protocol/src/types/: chunk.rs  flattening.rs  mod.rs  nbt.rs  nbt_snbt.rs  position.rs  slot.rs  var_int.rs  var_long.rs
crates/protocol/src/versions/: mod.rs
crates/protocol/src/versions/v1_10_x/: mod.rs
crates/protocol/src/versions/v1_11_x/: mod.rs
crates/protocol/src/versions/v1_12_2/play/: mod.rs
crates/protocol/src/versions/v1_12_2/status/: mod.rs
crates/protocol/src/versions/v1_12_x/handshake/: mod.rs
crates/protocol/src/versions/v1_12_x/login/: mod.rs
crates/protocol/src/versions/v1_12_x/play/: mod.rs
crates/protocol/src/versions/v1_13_x/: mod.rs
crates/protocol/src/versions/v1_14_x/: mod.rs
crates/protocol/src/versions/v1_15_x/: mod.rs
crates/protocol/src/versions/v1_16_5/handshake/: mod.rs
crates/protocol/src/versions/v1_16_5/login/: mod.rs
crates/protocol/src/versions/v1_16_5/play/: mod.rs
crates/protocol/src/versions/v1_16_5/status/: mod.rs
crates/protocol/src/versions/v1_16_x/login/: mod.rs
crates/protocol/src/versions/v1_16_x/play/: mod.rs
crates/protocol/src/versions/v1_17_x/: mod.rs
crates/protocol/src/versions/v1_18_x/: mod.rs
crates/protocol/src/versions/v1_19_4/handshake/: mod.rs
crates/protocol/src/versions/v1_19_4/play/: mod.rs
crates/protocol/src/versions/v1_19_x/login/: mod.rs
crates/protocol/src/versions/v1_19_x/play/: mod.rs
crates/protocol/src/versions/v1_19_x/status/: mod.rs
crates/protocol/src/versions/v1_20_4/login/: mod.rs
crates/protocol/src/versions/v1_20_4/play/: mod.rs
crates/protocol/src/versions/v1_20_x/config/: mod.rs
crates/protocol/src/versions/v1_20_x/handshake/: mod.rs
crates/protocol/src/versions/v1_20_x/login/: mod.rs
crates/protocol/src/versions/v1_20_x/play/: mod.rs
crates/protocol/src/versions/v1_20_x/status/: mod.rs
crates/protocol/src/versions/v1_9_x/: mod.rs
crates/proxy-core/: Cargo.toml  build.rs
crates/proxy-core/proto/: control_plane.proto
crates/proxy-core/src/: buffer_pool.rs  chat_signing.rs  config_synthesis.rs  cookies_transfers.rs  error.rs  failover.rs  health_probe.rs  lib.rs  metrics.rs  metrics_player.rs  metrics_report.rs  proxy.rs  region_selector.rs  resource_pack.rs  routing.rs  server.rs  session.rs
crates/proxy-core/src/control_plane/: mod.rs
crates/proxy-core/src/data/: db.rs  permissions.rs
crates/proxy-core/src/features/: commands.rs  exploit_guard.rs  mod.rs  server_selector.rs  transfer.rs
crates/proxy-core/src/net/: connection.rs  connection_pool.rs  connection_throttle.rs  ip_reputation.rs  limbo.rs  login_packets.rs  mod.rs  modloader.rs  packet_builder.rs  packet_ids.rs  packet_io.rs  plugin_channel_rate_limit.rs  plugin_decoder.rs  proxy_protocol.rs  query.rs  queue.rs  registry_data.rs  relay.rs
crates/proxy-core/src/net/converter/: chunk_repack.rs  dimension_codec.rs  flattening.rs  helpers.rs  items.rs  mod.rs  modern_to_v1_8.rs  safe.rs  v1_12_2_to_v1_16_5.rs  v1_12_2_to_v1_6_4.rs  v1_16_5_to_v1_12_2.rs  v1_16_5_to_v1_20_4.rs  v1_20_4_to_v1_16_5.rs  v1_6_4_to_v1_12_2.rs  v1_6_4_to_v1_16_5.rs  v1_7_to_v1_8.rs  v1_8_to_modern.rs  v1_8_to_v1_7.rs
crates/proxy-core/src/net/limbo_packets/: mod.rs  v1_10.rs  v1_11.rs  v1_12.rs  v1_13.rs  v1_14.rs  v1_15.rs  v1_16.rs  v1_17.rs  v1_18.rs  v1_19.rs  v1_20.rs  v1_21.rs  v1_6.rs  v1_7.rs  v1_8.rs  v1_9.rs  v26.rs
crates/proxy-core/src/protocol/: coverage.rs  dimension_codec.rs  mod.rs
crates/proxy-core/src/security/: encryption.rs  mod.rs
crates/proxy-core/src/services/: http_api.rs  mod.rs  server_management.rs
data/: proxy.db
(+100 files in other folders)
