[workspace]
members = [
    "crates/protocol",
    "crates/netty",
    "crates/auth",
    "crates/proxy-core",
    "crates/anticheat",
    "crates/config",
    "crates/api",
    "crates/dashboard-api",
    "crates/plugin-system",
    "crates/cluster",
    "crates/metrics",
    "cargo-kpl",
]
resolver = "2"

[package]
name = "kojacoord-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kojacoord-config = { path = "crates/config" }
kojacoord-auth = { path = "crates/auth" }
kojacoord-proxy-core = { path = "crates/proxy-core" }
kojacoord-dashboard-api = { path = "crates/dashboard-api" }
tracing-appender = "0.2"
flate2 = "1.0"
chrono = { workspace = true }
toml = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Authorization", "Win32_Security", "Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alex Guy Yann Le Roy"]
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

kojacoord-auth = { path = "./crates/auth"}

# crypto
rsa = { version = "0.9", features = ["pkcs5", "pem"] }
rand = "0.8"
sha1 = "0.10"
md-5 = "0.10"
aes = "0.8"
cfb-mode = "0.8"

# networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v3", "v4", "serde"] }

# error handling
thiserror = "1"
anyhow = "1"

# config
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

# database
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# compression
flate2 = "1"

# hmac
hmac = "0.12"
hex = "0.4"

# time
chrono = { version = "0.4", features = ["serde"] }

# concurrent data structures
dashmap = "6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
