[package]
name = "cargo-kpl"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "cargo-kpl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
zip = "0.6"
walkdir = "2"
