[package]
name = "kojacoord-auth"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
aes = { workspace = true }
cfb-mode = { workspace = true }
cipher = "0.4"
hmac = { workspace = true }
sha2 = "0.10"
hex = { workspace = true }
kojacoord-protocol = { path = "../protocol" }
