[package]
name = "kojacoord-dashboard-api"
version.workspace = true
edition.workspace = true

[lib]
name = "kojacoord_dashboard_api"
path = "src/lib.rs"

[dependencies]
# Shared live proxy state + config (the whole point of folding the dashboard in).
kojacoord-proxy-core = { path = "../proxy-core" }
kojacoord-config = { path = "../config" }

tokio = { workspace = true }
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = { workspace = true }
thiserror = "1"
anyhow = { workspace = true }
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tokio-tungstenite = { version = "0.23", features = ["rustls"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
