[package]
name = "kojacoord-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = "0.13"
axum = { version = "0.7", features = ["macros"] }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dashmap = { workspace = true }
