[package]
name = "kojacoord-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
